Autocomplete: chip fix overlapping issue (#3163)
* 2698 - autocomplete fix chip overlapping issue

* 2698 - build fixes

* 2698 - autocomplete fix dropdown overflow and close icon to display in end

* 2698 - add dynamic css for clearable icon

* 2698 - build fixes

* 2698 - css fixes for autocomplete input

--- a/stencil-workspace/src/components/modus-chip/modus-chip.scss
+++ b/stencil-workspace/src/components/modus-chip/modus-chip.scss
@@ -61,6 +61,7 @@
   .icon-remove,
   .icon-remove path {
     fill: $modus-chip-color !important;
+    flex-shrink: 0;
   }
 
   &.style-outline {
